--- a/model/pom.xml
+++ b/model/pom.xml
@@ -8,9 +8,9 @@
         <version>${revision}</version>
     </parent>
     
-    <groupId>cz.masci.drd</groupId>
     <artifactId>model</artifactId>
     <version>${revision}</version>
+
     <name>DrD: Model</name>
     <description>DrD Model</description>
     
@@ -23,8 +23,8 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
 </project>
