--- a/springfx/pom.xml
+++ b/springfx/pom.xml
@@ -11,6 +11,7 @@
   <groupId>cz.masci.springfx</groupId>
   <artifactId>master-view-editor</artifactId>
   <version>${revision}</version>
+
   <name>Spring FX: Master View</name>
   <description>Spring FX modules</description>
     
@@ -32,28 +33,14 @@
       <artifactId>javafx-weaver-spring-boot-starter</artifactId>
     </dependency>
     
-    <!-- open jfx: win -->
+    <!-- open jfx -->
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <classifier>win</classifier>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-graphics</artifactId>
-      <classifier>win</classifier>
-    </dependency>
-    
-    <!-- open jfx: linux -->
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-fxml</artifactId>
-      <classifier>linux</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-graphics</artifactId>
-      <classifier>linux</classifier>
     </dependency>
   </dependencies>
 </project>
