--- a/service/pom.xml
+++ b/service/pom.xml
@@ -27,8 +27,8 @@
           <artifactId>model</artifactId>
         </dependency>
         <dependency>
-            <groupId>cz.masci.springfx</groupId>
-            <artifactId>springfx-data</artifactId>
+            <groupId>cz.masci.commons</groupId>
+            <artifactId>commons-springfx-data</artifactId>
         </dependency>
         
         <dependency>
