--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,6 @@
         <module>persistence</module>
         <module>service</module>
         <module>ui</module>
-        <module>springfx</module>
-        <module>springfx-data</module>
     </modules>
 
     <properties>
@@ -80,6 +78,7 @@
         <javafx.weaver.version>1.3.0</javafx.weaver.version>
         <javafx.version>17.0.2</javafx.version>
         <controlsfx.version>11.1.2</controlsfx.version>
+        <cz.masci.commons.springfx>0.0.13</cz.masci.commons.springfx>
     </properties>
 
     <dependencyManagement>
@@ -117,14 +116,11 @@
             </dependency>
 
             <dependency>
-                <groupId>cz.masci.springfx</groupId>
-                <artifactId>master-view-editor</artifactId>
-                <version>${revision}</version>
-            </dependency>
-            <dependency>
-                <groupId>cz.masci.springfx</groupId>
-                <artifactId>springfx-data</artifactId>
-                <version>${revision}</version>
+                <groupId>cz.masci.commons</groupId>
+                <artifactId>commons-springfx-bom</artifactId>
+                <version>${cz.masci.commons.springfx}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!-- mapstruct dependencies -->
