--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-    
-  <parent>
-    <groupId>cz.masci.drd</groupId>
-    <artifactId>drd-application</artifactId>
-    <version>${revision}</version>
-  </parent>
-    
-  <artifactId>ui</artifactId>
-  <version>${revision}</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <name>DrD: UI</name>
-  <description>DrD UI</description>
-    
-  <dependencies>
-    <dependency>
-      <groupId>cz.masci.drd</groupId>
-      <artifactId>service</artifactId>
-    </dependency>
-        
-    <dependency>
-      <groupId>cz.masci.springfx</groupId>
-      <artifactId>master-view-editor</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.controlsfx</groupId>
-      <artifactId>controlsfx</artifactId>
-    </dependency>
-  </dependencies>
+    <parent>
+        <groupId>cz.masci.drd</groupId>
+        <artifactId>drd-application</artifactId>
+        <version>${revision}</version>
+    </parent>
+
+    <artifactId>ui</artifactId>
+    <version>${revision}</version>
+
+    <name>DrD: UI</name>
+    <description>DrD UI</description>
+
+    <dependencies>
+        <dependency>
+            <groupId>cz.masci.drd</groupId>
+            <artifactId>service</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cz.masci.commons</groupId>
+            <artifactId>commons-springfx-mve</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cz.masci.commons</groupId>
+            <artifactId>commons-springfx-fxml</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+        </dependency>
+    </dependencies>
 </project>
