--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <javafx.weaver.version>1.3.0</javafx.weaver.version>
         <javafx.version>17.0.2</javafx.version>
         <controlsfx.version>11.1.2</controlsfx.version>
+        <apache.lang.version>3.11</apache.lang.version>
         <cz.masci.commons.springfx>0.0.13</cz.masci.commons.springfx>
     </properties>
 
@@ -174,6 +175,12 @@
                 <artifactId>flyway-spring5-test</artifactId>
                 <version>${flyway.spring5.test.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${apache.lang.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
