--- a/service/pom.xml
+++ b/service/pom.xml
@@ -27,6 +27,10 @@
           <artifactId>model</artifactId>
         </dependency>
         <dependency>
+            <groupId>cz.masci.drd</groupId>
+            <artifactId>persistence</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cz.masci.commons</groupId>
             <artifactId>commons-springfx-data</artifactId>
         </dependency>
@@ -34,10 +38,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cz.masci.drd</groupId>
-            <artifactId>persistence</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -48,7 +48,12 @@
             <artifactId>mapstruct-processor</artifactId>
             <scope>provided</scope>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
         <!-- Tests -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
