DD-35: UI Battle progressing

--- a/app/src/main/resources/application-local.yaml
+++ b/app/src/main/resources/application-local.yaml
@@ -1,2 +1,10 @@
 # override base configuration
 DERBY_SYSTEM_HOME: data
+
+logging:
+  level:
+    cz:
+      masci:
+        commons:
+          springfx:
+            autoconfigure: DEBUG
