DD-35: Clear groups when return to the first slide

--- a/app/src/main/resources/application-local.yaml
+++ b/app/src/main/resources/application-local.yaml
@@ -4,7 +4,4 @@ DERBY_SYSTEM_HOME: data
 logging:
   level:
     cz:
-      masci:
-        commons:
-          springfx:
-            autoconfigure: DEBUG
+      masci: DEBUG
