DD-46 Refactor weapon list detail view to MVCI pattern (#19)
* DD-46 Rewrite Weapon view using MVCI

* DD-46 Add save all and discard all

* DD-46 Reload, save all and discard all actions with initial weapons list load.

* DD-46 Create new weapon

* DD-46 Add create following actions select item in the table and focus detail view first input text

* DD-46 Fix selecting wrong row with dirty style class

* DD-46 Setup sonatype repository url. Upgrade github action

* DD-46 Remove sonatype repository

* DD-46 Update used library version

* DD-46 Use reactfx for disable properties

* DD-46 Create abstract classes for detail command controller and list command controller

* DD-46 Use reactfx in detail view builder and list view builder

* DD-46 Fix error in MFX library setting empty string in text field if the selected item is null

* DD-46 Remove transient elements when discard. Split ListModel interface to be more granular

* DD-46 Move some classes to library

* DD-46 Remove old fxml weapon related files

* DD-46 Update github action's versions

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -25,15 +25,28 @@
             <groupId>cz.masci.commons</groupId>
             <artifactId>commons-springfx-mve</artifactId>
         </dependency>
-
         <dependency>
             <groupId>cz.masci.commons</groupId>
             <artifactId>commons-springfx-fxml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cz.masci.commons</groupId>
+            <artifactId>commons-springfx-mvci</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <!-- test dependencies -->
