--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -22,4 +22,4 @@ jobs:
         cache: 'maven'
 
     - name: Verify with Maven
-      run: mvn -B verify -Drevision=1.0.0-SNAPSHOT --file pom.xml
+      run: xvfb-run mvn -B verify -Drevision=1.0.0-SNAPSHOT --file pom.xml
