--- a/app/pom.xml
+++ b/app/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-derby</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>net.rgielen</groupId>
