--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.0</version>
+        <version>3.3.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -74,13 +74,17 @@
 
         <!-- dependency versions -->
         <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
-        <flyway.version>9.7.0</flyway.version>
         <flyway.spring5.test.version>7.0.0</flyway.spring5.test.version>
         <javafx.weaver.version>1.3.0</javafx.weaver.version>
         <javafx.version>21</javafx.version>
         <controlsfx.version>11.2.1</controlsfx.version>
         <apache.lang.version>3.11</apache.lang.version>
         <cz.masci.commons.springfx>0.0.30</cz.masci.commons.springfx>
+
+        <!-- Spring boot dependencies override versions -->
+        <flyway.version>10.17.1</flyway.version>
+        <derby.version>10.17.1.0</derby.version>
+        <hibernate.version>6.6.0.Final</hibernate.version>
     </properties>
 
     <dependencyManagement>
