DD-61 Remove deprecated battle wizard implementation based on MVE model

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -21,14 +21,14 @@
             <artifactId>service</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>cz.masci.commons</groupId>
-            <artifactId>commons-springfx-mve</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cz.masci.commons</groupId>
-            <artifactId>commons-springfx-fxml</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cz.masci.commons</groupId>-->
+<!--            <artifactId>commons-springfx-mve</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>cz.masci.commons</groupId>-->
+<!--            <artifactId>commons-springfx-fxml</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>cz.masci.commons</groupId>
             <artifactId>commons-springfx-mvci</artifactId>
