DD-57 Split the tile class button hover and focused css styles

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -154,7 +154,7 @@
                                         </environment>
                                         <project>
                                             <java>
-                                                <mainClass>org.springframework.boot.loader.JarLauncher</mainClass>
+                                                <mainClass>org.springframework.boot.loader.launch.JarLauncher</mainClass>
                                             </java>
                                         </project>
                                         <assemble>
